--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a href="#"><img src="images/tik-tok_3046126.png" alt="TikTok" width="32" height="32"></a>
           <a href="#"><img src="images/youtube_152810.png" alt="YouTube" width="32" height="32"></a>
         </div>
-        <a href="#contact" class="btn-secondary">Get In Touch</a>
+        <a href="contact.html" class="btn-secondary">Get In Touch</a>
       </div>
       <div class="hero-image">
         <img src="images/image.png" alt="KJ Vee" width="400" height="auto">
@@ -77,7 +77,7 @@
   <section id="about" class="about">
     <div class="container about-content">
       <div class="about-image">
-        <img src="jenna-profile.jpg" alt="KJ Vee Profile" width="500" height="auto">
+        <img src="images/profile.png" alt="KJ Vee Profile" width="500" height="auto">
       </div>
       <div class="about-text">
         <h3>About Me</h3>
@@ -90,7 +90,7 @@
           <li><strong>3+</strong> Years Experience</li>
           <li><strong>10+</strong> Projects Completed</li>
         </ul>
-        <a href="#contact" class="btn-secondary">Get In Touch</a>
+        <a href="contact.html" class="btn-secondary">Get In Touch</a>
       </div>
     </div>
   </section>
@@ -131,12 +131,12 @@
           <h4>Web Design</h4>
         </div>
         <div class="service-card">
-          <img src="service2.jpg" alt="Business Strategy Service" width="80" height="80">
-          <h4>Business Strategy</h4>
+          <img src="service2.jpg" alt="Web Development" width="80" height="80">
+          <h4>Web Development</h4>
         </div>
         <div class="service-card">
-          <img src="service3.jpg" alt="UX Research Service" width="80" height="80">
-          <h4>UX Research</h4>
+          <img src="service3.jpg" alt="Content Creation Service" width="80" height="80">
+          <h4>Content Creation</h4>
         </div>
       </div>
     </div>
