--- a/services.html
+++ b/services.html
@@ -90,79 +90,9 @@
       }
       
       .services-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr; /* Stack cards on smaller screens */
       }
     }
-
-@media (max-width: 992px) {
-  /* Mobile Menu Toggle */
-  .menu-toggle {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 24px;
-    width: 30px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    z-index: 1001;
-  }
-
-  .menu-toggle span {
-    display: block;
-    height: 3px;
-    width: 100%;
-    background: white;
-    transition: all 0.3s ease;
-  }
-
-  .menu-toggle.active span:nth-child(1) {
-    transform: translateY(10px) rotate(45deg);
-  }
-
-  .menu-toggle.active span:nth-child(2) {
-    opacity: 0;
-  }
-
-  .menu-toggle.active span:nth-child(3) {
-    transform: translateY(-10px) rotate(-45deg);
-  }
-
-  /* Navigation */
-  .nav-links {
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    width: 80%;
-    height: calc(100vh - 80px);
-    background: rgba(0,0,0,0.95);
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding-top: 40px;
-    transition: left 0.3s ease;
-    z-index: 1000;
-  }
-
-  .nav-links.active {
-    left: 0;
-  }
-
-  /* Header adjustments */
-  header {
-    padding: 20px 0;
-  }
-
-  /* Services grid */
-  .services-grid {
-    grid-template-columns: 1fr;
-  }
-
-  /* Prevent body scroll when menu is open */
-  body.menu-open {
-    overflow: hidden;
-  }
-}
   </style>
 </head>
 <body>
@@ -333,15 +263,5 @@
   </footer>
 
   <script src="script.js"></script>
-  <script>
-    // Update copyright year
-    document.getElementById('current-year').textContent = new Date().getFullYear();
-  </script>
-  <script>
-
-document.getElementById('mobile-menu')?.addEventListener('click', function() {
-  document.querySelector('.nav-links')?.classList.toggle('show');
-});
-</script>
 </body>
 </html>
