added images and icons

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
     <!-- Identity Cards -->
     <div class="identity-cards">
       <div class="identity-card">
-        <img src="images/backend-icon.png" alt="Backend Development" width="60" height="60">
+        <img src="images/developer.png" alt="Backend Development" width="60" height="60">
         <h3>Backend Engineer</h3>
         <p>Specializing in PHP and Python, I build robust, scalable systems that power modern web applications. My focus is on clean architecture and efficient database design.</p>
         <ul class="skills-list">
@@ -133,18 +133,18 @@
       </div>
       
       <div class="identity-card">
-        <img src="images/creator-icon.png" alt="Content Creation" width="60" height="60">
+        <img src="images/content.png" alt="Content Creation" width="60" height="60">
         <h3>Content Creator</h3>
         <p>Through engaging videos and tutorials, I demystify technology for my growing community across multiple platforms.</p>
         <div class="channel-grid">
-          <a href="[YOUR_TIKTOK_URL]" target="_blank" class="channel-card">
-            <img src="images/tiktok-icon.png" alt="TikTok" width="40" height="40">
+          <a href="https://www.tiktok.com/@kj_vee_?_t=ZM-8xr0NP2e5Ys&_r=1" target="_blank" class="channel-card">
+            <img src="images/tik-tok_3046126.png" alt="TikTok" width="40" height="40">
             <h4>TikTok</h4>
-            <p>@KJVee_Tech</p>
+            <p>@kj_vee_</p>
             <p>Quick tech tips & trends</p>
           </a>
-          <a href="[YOUR_YOUTUBE_URL]" target="_blank" class="channel-card">
-            <img src="images/youtube-icon.png" alt="YouTube" width="40" height="40">
+          <a href="https://www.youtube.com/@kjveecreations" target="_blank" class="channel-card">
+            <img src="images/play_14776936.png" alt="YouTube" width="40" height="40">
             <h4>YouTube</h4>
             <p>KJ Vee Dev</p>
             <p>In-depth tutorials</p>
@@ -153,7 +153,7 @@
       </div>
       
       <div class="identity-card">
-        <img src="images/teaching-icon.png" alt="Teaching" width="60" height="60">
+        <img src="images/educator.png" alt="Teaching" width="60" height="60">
         <h3>Future Educator</h3>
         <p>Teaching isn't just a future goal—it's how I approach every project and interaction today.</p>
         <div class="teaching-philosophy">
