--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
       <h2>Recent Projects</h2>
       <div class="project-gallery">
         <div class="project-card">
-          <img src="project1.jpg" alt="Website Design Project" width="400" height="300">
+          <img src="images/Welile.PNG" alt="Website Design Project" width="400" height="300">
           <h4>Website Design</h4>
-          <p>Web Design, App Design</p>
+          <p>Website Design and Development</p>
         </div>
         <div class="project-card">
-          <img src="project2.jpg" alt="Web Application Project" width="400" height="300">
+          <img src="images/web.png" alt="Web Application Project" width="400" height="300">
           <h4>Website Design</h4>
-          <p>Web Design, App Design</p>
+          <p>Web Design</p>
         </div>
         <div class="project-card">
-          <img src="project3.jpg" alt="Mobile App Project" width="400" height="300">
-          <h4>Website Design</h4>
-          <p>Web Design, App Design</p>
+          <img src="images/yt.PNG" alt="Youtube project" width="400" height="300">
+          <h4>YouTube Channel</h4>
+          <p>Channel Setup, First Video Upload</p>
         </div>
       </div>
     </div>
@@ -127,15 +127,15 @@
       <h2>Design <span>Services</span> I Offer</h2>
       <div class="service-cards">
         <div class="service-card">
-          <img src="service1.jpg" alt="Web Design Service" width="80" height="80">
+          <img src="images/web-design.png" alt="Web Design Service" width="80" height="80">
           <h4>Web Design</h4>
         </div>
         <div class="service-card">
-          <img src="service2.jpg" alt="Web Development" width="80" height="80">
+          <img src="images/web-development.png" alt="Web Development" width="80" height="80">
           <h4>Web Development</h4>
         </div>
         <div class="service-card">
-          <img src="service3.jpg" alt="Content Creation Service" width="80" height="80">
+          <img src="images/content.png" alt="Content Creation Service" width="80" height="80">
           <h4>Content Creation</h4>
         </div>
       </div>
