Added Welile Logo

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <!-- Logos Section -->
   <section class="logos">
     <div class="container logo-row">
-      <img src="logo1.png" alt="Sponsor Logo" width="120" height="40">
+      <img src="images/logo Welile White.png" alt="Sponsor Logo" width="120" height="40">
       <img src="logo2.png" alt="Sponsor Logo" width="120" height="40">
       <img src="logo3.png" alt="Sponsor Logo" width="120" height="40">
       <img src="logo4.png" alt="Sponsor Logo" width="120" height="40">
